refactored models,mapping,services and controllers